latex2mmlc/src/snapshots/latex2mmlc__tests__int_prime.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\int'"
---
<math>
    <msup>
        <mo>∫</mo>
        <mo>′</mo>
    </msup>
</math>
