latex2mmlc/src/snapshots/latex2mmlc__tests__integral_pointless_limits.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\int\\limits dx"
---
<math>
    <mo>∫</mo>
    <mi>d</mi>
    <mi>x</mi>
</math>
