latex2mmlc/src/snapshots/latex2mmlc__tests__integral_with_bounds.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\int_0^1 dx"
---
<math>
    <msubsup>
        <mo>∫</mo>
        <mn>0</mn>
        <mn>1</mn>
    </msubsup>
    <mi>d</mi>
    <mi>x</mi>
</math>
