latex2mmlc/src/snapshots/latex2mmlc__tests__integral_with_complex_bound.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\int_{0+1}^\\infty"
---
<math>
    <msubsup>
        <mo>∫</mo>
        <mrow>
            <mn>0</mn>
            <mo>+</mo>
            <mn>1</mn>
        </mrow>
        <mi mathvariant="normal">∞</mi>
    </msubsup>
</math>
