latex2mmlc/src/snapshots/latex2mmlc__tests__integral_with_lower_bound.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\int_0 dx"
---
<math>
    <msub>
        <mo>∫</mo>
        <mn>0</mn>
    </msub>
    <mi>d</mi>
    <mi>x</mi>
</math>
