latex2mmlc/src/snapshots/latex2mmlc__tests__integral_with_lower_limit.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\int\\limits_0 dx"
---
<math>
    <munder>
        <mo>∫</mo>
        <mn>0</mn>
    </munder>
    <mi>d</mi>
    <mi>x</mi>
</math>
