latex2mmlc/src/snapshots/latex2mmlc__tests__integral_with_upper_bound.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\int^1 dx"
---
<math>
    <msup>
        <mo>∫</mo>
        <mn>1</mn>
    </msup>
    <mi>d</mi>
    <mi>x</mi>
</math>
