latex2mmlc/src/snapshots/latex2mmlc__tests__integral_with_upper_limit.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\int\\limits^1 dx"
---
<math>
    <mover>
        <mo>∫</mo>
        <mn>1</mn>
    </mover>
    <mi>d</mi>
    <mi>x</mi>
</math>
