latex2mmlc/src/snapshots/latex2mmlc__tests__invalid_sub_sup.snap
---
source: latex2mmlc/src/lib.rs
expression: x^_
---
InvalidCharacter {
    expected: "identifier",
    got: '_',
}
