latex2mmlc/src/snapshots/latex2mmlc__tests__invalid_sup.snap
---
source: latex2mmlc/src/lib.rs
expression: x^^
---
CannotBeUsedHere {
    got: Circumflex,
    correct_place: "after an identifier or operator",
}
